--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
     "bwip-js": "^0.16.0",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hjs": "~0.0.6",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "morgan": "~1.6.1"
   }
 }
