--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "bwip-js": "^0.16.0",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hjs": "~0.0.6",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "node-string-pad": "0.0.4",
+    "xmlbuilder": "^8.2.2"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5",
+    "should": "^8.3.1"
   }
 }
