--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "biometric-barcode-gen",
   "version": "0.0.0",
   "private": true,
-  "main": "server.js",
+  "main": "app.js",
   "engines": {
     "node": "4.2"
   },
